lib/imagekit_ffi_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for imagekit_ffi
class ImagekitFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ImagekitFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ImagekitFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  bool save_rgba_to_png(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.Uint8> rgba,
    int width,
    int height,
  ) {
    return _save_rgba_to_png(
      filename,
      rgba,
      width,
      height,
    );
  }

  late final _save_rgba_to_pngPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>,
              ffi.Int, ffi.Int)>>('save_rgba_to_png');
  late final _save_rgba_to_png = _save_rgba_to_pngPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>, int, int)>();

  ffi.Pointer<ffi.Uint8> encode_rgba_to_png_buffer(
    ffi.Pointer<ffi.Uint8> rgba,
    int width,
    int height,
    ffi.Pointer<ffi.Size> out_size,
  ) {
    return _encode_rgba_to_png_buffer(
      rgba,
      width,
      height,
      out_size,
    );
  }

  late final _encode_rgba_to_png_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int, ffi.Pointer<ffi.Size>)>>('encode_rgba_to_png_buffer');
  late final _encode_rgba_to_png_buffer =
      _encode_rgba_to_png_bufferPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Uint8> convert_png_to_rgba(
    ffi.Pointer<ffi.Uint8> png_data,
    int png_size,
    ffi.Pointer<ffi.Int> width,
    ffi.Pointer<ffi.Int> height,
  ) {
    return _convert_png_to_rgba(
      png_data,
      png_size,
      width,
      height,
    );
  }

  late final _convert_png_to_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>)>>('convert_png_to_rgba');
  late final _convert_png_to_rgba = _convert_png_to_rgbaPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<ffi.Uint8> convert_bgra_to_png_buffer(
    ffi.Pointer<ffi.Uint8> bgra,
    int width,
    int height,
    ffi.Pointer<ffi.Size> out_size,
  ) {
    return _convert_bgra_to_png_buffer(
      bgra,
      width,
      height,
      out_size,
    );
  }

  late final _convert_bgra_to_png_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int, ffi.Pointer<ffi.Size>)>>('convert_bgra_to_png_buffer');
  late final _convert_bgra_to_png_buffer =
      _convert_bgra_to_png_bufferPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Uint8> convert_yuv420_to_png_buffer(
    ffi.Pointer<ffi.Uint8> y_plane,
    ffi.Pointer<ffi.Uint8> u_plane,
    ffi.Pointer<ffi.Uint8> v_plane,
    int width,
    int height,
    int y_stride,
    int u_stride,
    int v_stride,
    int u_pix_stride,
    int v_pix_stride,
    ffi.Pointer<ffi.Size> out_size,
  ) {
    return _convert_yuv420_to_png_buffer(
      y_plane,
      u_plane,
      v_plane,
      width,
      height,
      y_stride,
      u_stride,
      v_stride,
      u_pix_stride,
      v_pix_stride,
      out_size,
    );
  }

  late final _convert_yuv420_to_png_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Size>)>>('convert_yuv420_to_png_buffer');
  late final _convert_yuv420_to_png_buffer =
      _convert_yuv420_to_png_bufferPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Uint8> convert_nv21_to_png_buffer(
    ffi.Pointer<ffi.Uint8> y_plane,
    ffi.Pointer<ffi.Uint8> uv_plane,
    int width,
    int height,
    int y_stride,
    int uv_stride,
    int uv_pix_stride,
    ffi.Pointer<ffi.Size> out_size,
  ) {
    return _convert_nv21_to_png_buffer(
      y_plane,
      uv_plane,
      width,
      height,
      y_stride,
      uv_stride,
      uv_pix_stride,
      out_size,
    );
  }

  late final _convert_nv21_to_png_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Size>)>>('convert_nv21_to_png_buffer');
  late final _convert_nv21_to_png_buffer =
      _convert_nv21_to_png_bufferPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Uint8> rotate_rgb_image(
    ffi.Pointer<ffi.Uint8> rgb,
    int width,
    int height,
    int rotationDegrees,
  ) {
    return _rotate_rgb_image(
      rgb,
      width,
      height,
      rotationDegrees,
    );
  }

  late final _rotate_rgb_imagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int, ffi.Int)>>('rotate_rgb_image');
  late final _rotate_rgb_image = _rotate_rgb_imagePtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, int, int, int)>();

  void free_buffer(
    ffi.Pointer<ffi.Uint8> buffer,
  ) {
    return _free_buffer(
      buffer,
    );
  }

  late final _free_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'free_buffer');
  late final _free_buffer =
      _free_bufferPtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Uint8> convert_yuv420_to_rgba(
    ffi.Pointer<ffi.Uint8> y_plane,
    ffi.Pointer<ffi.Uint8> u_plane,
    ffi.Pointer<ffi.Uint8> v_plane,
    int width,
    int height,
    int y_stride,
    int u_stride,
    int v_stride,
    int u_pix_stride,
    int v_pix_stride,
  ) {
    return _convert_yuv420_to_rgba(
      y_plane,
      u_plane,
      v_plane,
      width,
      height,
      y_stride,
      u_stride,
      v_stride,
      u_pix_stride,
      v_pix_stride,
    );
  }

  late final _convert_yuv420_to_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int)>>('convert_yuv420_to_rgba');
  late final _convert_yuv420_to_rgba = _convert_yuv420_to_rgbaPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          int,
          int,
          int)>();

  ffi.Pointer<ffi.Uint8> convert_nv21_to_rgba(
    ffi.Pointer<ffi.Uint8> y_plane,
    ffi.Pointer<ffi.Uint8> uv_plane,
    int width,
    int height,
    int y_stride,
    int uv_stride,
    int uv_pix_stride,
  ) {
    return _convert_nv21_to_rgba(
      y_plane,
      uv_plane,
      width,
      height,
      y_stride,
      uv_stride,
      uv_pix_stride,
    );
  }

  late final _convert_nv21_to_rgbaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int)>>('convert_nv21_to_rgba');
  late final _convert_nv21_to_rgba = _convert_nv21_to_rgbaPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>, int, int, int, int, int)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;
